# CineOnStream

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/streamcine/: ExampleInstrumentedTest.kt
app/src/androidTest/java/io/tech4fun/lanorganizer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/streamcine/: MainActivity.kt  MovieActivity.kt  SplashActivity.kt
app/src/main/java/com/example/streamcine/data/models/: MovieModel.kt
app/src/main/java/com/example/streamcine/data/repository/: MovieRepository.kt
app/src/main/java/com/example/streamcine/data/sources/: OnlineMovieSource.kt
app/src/main/java/com/example/streamcine/data/states/: MovieUiState.kt
app/src/main/java/com/example/streamcine/network/: ApiConstant.kt  MovieDetail.kt  MoviesApiService.kt
app/src/main/java/io/tech4fun/lanorganizer/: CineOnStreamApplication.kt  MainActivity.kt  SplashActivity.kt
app/src/main/java/io/tech4fun/lanorganizer/data/: AppContainer.kt  AppDatabase.kt
app/src/main/java/io/tech4fun/lanorganizer/services/: MyBoundService.kt  MyForegroundService.kt
app/src/main/java/io/tech4fun/lanorganizer/work/: RefreshDataWorker.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/streamcine/: ExampleUnitTest.kt
app/src/test/java/io/tech4fun/lanorganizer/: ExampleUnitTest.kt
game_api/: Cargo.toml
game_api/src/: main.rs
game_api/src/data/: game.rs  mod.rs
game_api/src/games/: game_api.rs  mod.rs
gradle/wrapper/: gradle-wrapper.properties
(+46 files in other folders)
