[package]
name = "game_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wither = "0.9.0"
tokio = "1.19.2"
rocket = "0.5.0-rc.2"
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_contrib = { version = "0.4.11", features = ["helmet", "uuid"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
